<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".fragment.RegisterFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_select_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/action_select_picture"
        android:textColor="@color/white"
        android:background="@drawable/circle_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        ></androidx.appcompat.widget.AppCompatButton>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:padding="@dimen/padding_15"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/rounded_edt"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_select_picture"></EditText>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_15"
        android:background="@drawable/rounded_edt"
        app:layout_constraintEnd_toEndOf="@+id/edt_username"
        app:layout_constraintStart_toStartOf="@+id/edt_username"
        app:layout_constraintTop_toBottomOf="@id/edt_username"></EditText>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_15"
        android:background="@drawable/rounded_edt"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@id/edt_email"></EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:textColor="@color/white"
        android:text="@string/action_register"
        android:background="@drawable/rounded_btn"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@id/edt_password"></androidx.appcompat.widget.AppCompatButton>


    <TextView
        android:id="@+id/tv_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin_10"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>
</androidx.constraintlayout.widget.ConstraintLayout>